--- a/pink-lemon-llc-frontend/src/registration.css
+++ b/pink-lemon-llc-frontend/src/registration.css
@@ -5,49 +5,44 @@
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 5px;
-  }
-  
-  /* Stile dei campi di input */
-  .form-container input[type="text"],
-  .form-container input[type="email"],
-  .form-container input[type="password"],
+}
 
-  .form-container textarea {
+/* Stile dei campi di input */
+.form-container input[type='text'],
+.form-container input[type='email'],
+.form-container input[type='password'],
+.form-container textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-sizing: border-box;
-  }
-  
-  /* Stile del pulsante di invio */
-  .form-container input[type="submit"] {
+}
+
+/* Stile del pulsante di invio */
+.form-container input[type='submit'] {
     width: 100%;
     padding-left: 10px;
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: white;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-  }
-  
-  /* Stile del pulsante di invio al passaggio del mouse */
-  .form-container input[type="submit"]:hover {
+}
+
+/* Stile del pulsante di invio al passaggio del mouse */
+.form-container input[type='submit']:hover {
     background-color: #45a049;
-  }
-  
-  /* Stile del messaggio di successo */
-  .success-message {
-    color: #4CAF50;
+}
+
+/* Stile del messaggio di successo */
+.success-message {
+    color: #4caf50;
     font-weight: bold;
     margin-top: 10px;
-  }
+}
 
- .btn-cen{
-
-
+.btn-cen {
     margin-left: 120px;
-
- } 
-  
+}
