--- a/pink-lemon-llc-frontend/src/home.css
+++ b/pink-lemon-llc-frontend/src/home.css
@@ -7,6 +7,8 @@
     padding-bottom: 30px;
     text-align: center;
     font-size: 25px;
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 h3 {
@@ -41,6 +43,19 @@ h3 {
     display: flex;
     justify-content: space-between;
     margin-left: 300px;
+}
+
+.blog3 {
+    display: flex;
+    justify-content: center;
+  
+    
+}
+
+.edit-margin{
+
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .img {
@@ -253,15 +268,17 @@ input.button {
     margin-top: 10px;
 }
 
-.btn-pink-lemon {
-    padding: '16px';
-    border-radius: '20px';
-    color: 'white';
-    background-color: '#a855f7';
-    border: 'none';
-    cursor: 'pointer';
+.p-pink{
+
+    color: rgb(243, 113, 221);
+    font-family: 'system-ui';
+    font-size: 20px;
+    
 }
 
-.btn-pink-lemon:hover {
-    background-color: '#9333ea';
+.upload{
+
+    color: #c471f5;
+    
+
 }
