--- a/pink-lemon-llc-frontend/src/navbar.css
+++ b/pink-lemon-llc-frontend/src/navbar.css
@@ -7,7 +7,7 @@
 
 .footbar-app {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 80px;
     margin-top: 50px;
@@ -62,4 +62,13 @@ a {
 
 .container {
     width: 1200px;
+}
+
+.footer-link {
+  
+    font-family: 'system-ui';
+    font-size: 16px;
+    font-weight: 180;
+    color: grey;
+
 }
