--- a/pink-lemon-llc-frontend/src/navbar.css
+++ b/pink-lemon-llc-frontend/src/navbar.css
@@ -1,9 +1,62 @@
-.navbar-app {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+/* NUOVA NAVBAR */
+
+.navbar-position {
+    
+       justify-content: center;
+       display: flex;
+     
+
+    }
+
+
+
+    .logo {
+
+        color:rgb(218, 20, 142);
+        font-family: 'system-ui';
+
+
+        
+
+    
+            
+     }
+     
+
+     .link {
+
+      margin-right: 50px;
+      margin-left:  50px;
+      font-family: 'system-ui';
+      font-size: 20px;
+      font-weight: 200;
+
+     
+
+     }
+
+
+
+   .navback {
+
+    background-color:#ffffff;
+    color: blanchedalmond;
+
+
+   }
+
+
+
+
+
+.navbar-app1 {
+    
+    justify-content: center;
     padding-top: 20px;
-}
+    align-items: center;
+
+      }
+
 
 .footbar-app {
     display: flex;
@@ -19,18 +72,24 @@
 
 .nav {
     display: flex;
-    margin-right: 300px;
+    /*margin-right: 300px;*/
 }
 
 .navbar-link {
-    display: flex;
-    margin-left: 90px;
+
     font-family: 'system-ui';
     font-size: 20px;
     font-weight: 200;
     color: grey;
 }
 
+.navbar-link2 {
+    display: flex;
+    font-family: 'system-ui';
+    font-size: 20px;
+    font-weight: 200;
+    color: grey;
+}
 .navbar-link-logo {
     display: flex;
     font-family: 'system-ui';
@@ -48,20 +107,31 @@
     color: rgb(212, 7, 144);
 }
 
-.logo {
+.logo4 {
     margin-right: auto;
-    margin-left: 300px;
+    margin-left:  auto; /*300px;*/
     font-family: 'system-ui';
     font-size: 20px;
     font-weight: 600;
     color: rgb(243, 113, 221);
 }
+
+
+.logo2 {
+   margin-right: 20px;
+}
+
+
+
 a {
     text-decoration: none;
 }
 
-.container {
-    width: 1200px;
+.container1 {
+    
+    display: flex;
+    justify-content: space-between  ;
+ 
 }
 
 .footer-link {
@@ -70,5 +140,111 @@ a {
     font-size: 16px;
     font-weight: 180;
     color: grey;
+
+}
+
+
+@media all and (max-width: 1280px) {
+
+    .navbar-app {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 20px;
+    }
+    
+    .footbar-app {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80px;
+        margin-top: 50px;
+        border-top: 2px solid rgb(229, 5, 162);
+        border-radius: 5px;
+        /*margin-left: 100px;
+        margin-right: 100px;*/
+    }
+    
+    .nav {
+        display: flex;
+       /* margin-right: 300px;*/
+    }
+    
+    .navbar-link {
+        display: flex;
+        /*margin-left: 90px;*/
+        font-family: 'system-ui';
+        font-size: 15px;
+        font-weight: 200;
+        color: grey;
+    }
+    
+    .navbar-link-logo {
+        display: flex;
+        font-family: 'system-ui';
+        font-size: 20px;
+        font-weight: 200;
+        color: grey;
+    }
+    
+    .navbar-link-login {
+        display: flex;
+        margin-left: 0px;
+        font-family: 'system-ui';
+        font-size: 20px;
+        font-weight: 400;
+        color: rgb(212, 7, 144);
+    }
+    
+    .logo {
+        margin-right: auto;
+        /*margin-left: 300px;*/
+        font-family: 'system-ui';
+        font-size: 20px;
+        font-weight: 600;
+        color: rgb(243, 113, 221);
+    }
+    a {
+        text-decoration: none;
+    }
+    
+    .container {
+        display: flex;
+    }
+    
+    .footer-link {
+      
+        font-family: 'system-ui';
+        font-size: 16px;
+        font-weight: 180;
+        color: grey;
+    
+    }
+    
+}
+
+@media all and (max-width: 1000px) {
+
+.footbar-app {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    margin-top: 50px;
+    border-top: 2px solid rgb(229, 5, 162);
+    border-radius: 5px;
+    margin-left: 210px;
+    margin-right: 210px;
+}
+
+
+.footer-link {
+      
+    font-family: 'system-ui';
+    font-size: 12px;
+    font-weight: 180;
+    color: grey;
+
+} 
 
 }
