--- a/pink-lemon-llc-frontend/src/home.css
+++ b/pink-lemon-llc-frontend/src/home.css
@@ -331,8 +331,39 @@ input.button {
     color: rgb(243, 113, 221);
     font-family: 'system-ui';
     font-size: 20px;
+    margin-top: 10px;
     
 }
+
+.p-page{
+
+    color: rgb(139, 137, 139);
+    font-family: 'system-ui';
+    font-size: 20px;
+    text-align: justify;
+    display: flex;
+     margin-left: 100px;
+     margin-right: 100px;
+
+    
+}
+
+.p-page1{
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: rgb(211, 11, 175);
+    font-family: 'system-ui';
+    font-size: 20px;
+    text-align: justify;
+    display: flex;
+     margin-left: 100px;
+     margin-right: 100px;
+
+    
+}
+
+
 
 .upload{
 
@@ -393,6 +424,21 @@ input.button {
                 margin-left: 20px;
             
             }
+
+            .p-pink{
+
+                color: rgb(243, 113, 221);
+                font-family: 'system-ui';
+                font-size: 14px;
+                margin-top: 10px;
+                
+            }
+
+            .generated {
+
+                width: 800px;
+                height: 800px;
+            }
     
         }
 
@@ -409,7 +455,6 @@ input.button {
     
         margin-left: 90px; 
         
-      
     
         
         }
@@ -446,6 +491,36 @@ input.button {
        
     }
     
+
+    .p-page{
+
+        color: rgb(139, 137, 139);
+        font-family: 'system-ui';
+        font-size: 20px;
+        text-align: justify;
+        display: flex;
+         margin-left: 30px;
+         margin-right:30px;
+         margin-top: 70px;
+        
+        
+    }
+    
+    .p-page1{
+    
+        margin-top: 10px;
+        color: rgb(211, 11, 175);
+        font-family: 'system-ui';
+        font-size: 20px;
+        text-align: justify;
+        display: flex;
+         margin-left: 30px;
+         margin-right: 30px;
+        
+    
+    
+        
+    }
     .img-span {
         color: #e746bf;
         padding-bottom: 30px;
@@ -671,8 +746,8 @@ input.button {
     }
     
     .text-generation {
-        width: 700px;
-        height: 30px;
+        width: 500px;
+        height: 40px;
     }
     
     .tab-content {
@@ -718,7 +793,7 @@ input.button {
     
         color: rgb(243, 113, 221);
         font-family: 'system-ui';
-        font-size: 20px;
+        font-size: 13px;
         
     }
     
@@ -728,5 +803,8 @@ input.button {
         
     
     }
+
+
+
 
 }
