--- a/pink-lemon-llc-frontend/src/home.css
+++ b/pink-lemon-llc-frontend/src/home.css
@@ -710,6 +710,7 @@ input.button {
         color: rgb(243, 113, 221);
         font-weight: 300;
         margin-top: 10px;
+        margin-bottom: 20px;
     }
     
     .h2-description2 {
