--- a/pink-lemon-llc-frontend/src/home.css
+++ b/pink-lemon-llc-frontend/src/home.css
@@ -1,10 +1,16 @@
 /* codice per impaginare foto e testo centrale*/
 
-.home {
-    margin-left: 200px;
+
+.home{
+
+margin-left: 200px;
+
+
+
 }
 
-.home1 {
+.home1{
+
     margin-right: 200px;
     font-family: 'system-ui';
     font-size: 22px;
@@ -13,33 +19,41 @@
     line-height: 40 px;
     text-align: justify;
     margin-left: 20px;
+
 }
 
+
+
 .flex-container {
+    
     display: flex;
     width: 1000px;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row;
-}
+    flex-direction: row ;
+
+    }
 
 .flex-item {
-    display: flex;
+    display: flex; 
     align-items: center;
-}
+    }
 
-.flex-item1 {
-    flex: 1;
-    padding: 10px;
+    .flex-item1 {
+        flex: 1; 
+        padding: 10px;
+       
+        display: block;
+        }
 
-    display: block;
-}
+
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
+
 }
 
 .img-span {
@@ -88,16 +102,19 @@ h3 {
 .blog3 {
     display: flex;
     justify-content: center;
+  
+    
 }
 
-.edit-margin {
+.edit-margin{
+
     margin-left: 50px;
     margin-right: 50px;
 }
 
 .img {
     width: 300px;
-    height: 300px;
+    height: 300px;;
 }
 
 .img1 {
@@ -113,6 +130,7 @@ h3 {
     font-size: 18px;
     color: rgb(93, 86, 92);
     line-height: 35 px;
+   
 }
 
 .titolo {
@@ -146,6 +164,7 @@ h3 {
     border: #c471f5;
     background: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
 }
+
 
 /*
 p {
@@ -307,24 +326,30 @@ input.button {
     margin-top: 10px;
 }
 
-.p-pink {
+.p-pink{
+
     color: rgb(243, 113, 221);
     font-family: 'system-ui';
     font-size: 20px;
     margin-top: 10px;
+    
 }
 
-.p-page {
+.p-page{
+
     color: rgb(139, 137, 139);
     font-family: 'system-ui';
     font-size: 20px;
     text-align: justify;
     display: flex;
-    margin-left: 100px;
-    margin-right: 100px;
+     margin-left: 100px;
+     margin-right: 100px;
+
+    
 }
 
-.p-page1 {
+.p-page1{
+
     margin-top: 10px;
     margin-bottom: 10px;
     color: rgb(211, 11, 175);
@@ -332,111 +357,169 @@ input.button {
     font-size: 20px;
     text-align: justify;
     display: flex;
-    margin-left: 100px;
-    margin-right: 100px;
+     margin-left: 100px;
+     margin-right: 100px;
+
+    
 }
 
-.upload {
+
+
+.upload{
+
     color: #c471f5;
+    
+
 }
+
 
 @media all and (max-width: 1400px) {
-    .home {
+
+    .home{
+
         margin-left: 100px;
         width: 400px;
         height: 400px;
+        
+        
+        
+        }
+        
+        .home1{
+        
+            margin-right: 100px;
+            font-family: 'system-ui';
+            font-size: 22px;
+            font-weight: 100;
+            color: rgb(93, 86, 92);
+            line-height: 30 px;
+            text-align: justify;
+            margin-left: 20px;
+        
+        }
+
     }
 
-    .home1 {
-        margin-right: 100px;
-        font-family: 'system-ui';
-        font-size: 22px;
-        font-weight: 100;
-        color: rgb(93, 86, 92);
-        line-height: 30 px;
-        text-align: justify;
-        margin-left: 20px;
-    }
-}
+    @media all and (max-width: 1200px) {
 
-@media all and (max-width: 1200px) {
-    .home {
-        margin-left: 100px;
-        width: 400px;
-        height: 400px;
-    }
+        .home{
+    
+            margin-left: 100px;
+            width: 400px;
+            height: 400px;
+            
+            
+            
+            }
+            
+            .home1{
+            
+                margin-right: 100px;
+                font-family: 'system-ui';
+                font-size: 18px;
+                font-weight: 100;
+                color: rgb(93, 86, 92);
+                line-height: 30 px;
+                text-align: justify;
+                margin-left: 20px;
+            
+            }
 
-    .home1 {
-        margin-right: 100px;
-        font-family: 'system-ui';
-        font-size: 18px;
-        font-weight: 100;
-        color: rgb(93, 86, 92);
-        line-height: 30 px;
-        text-align: justify;
-        margin-left: 20px;
-    }
+            .p-pink{
 
-    .p-pink {
-        color: rgb(243, 113, 221);
-        font-family: 'system-ui';
-        font-size: 14px;
-        margin-top: 10px;
-    }
+                color: rgb(243, 113, 221);
+                font-family: 'system-ui';
+                font-size: 14px;
+                margin-top: 10px;
+                
+            }
 
-    .generated {
-        width: 800px;
-        height: 800px;
-    }
-}
+            .generated {
+
+                width: 800px;
+                height: 800px;
+            }
+    
+        }
+
+
+
+
+
+
+
 
 @media all and (max-width: 1000px) {
-    .home {
-        margin-left: 90px;
-    }
 
-    .home1 {
-        margin-right: 90px;
-        font-family: 'system-ui';
-        font-size: 13px;
-        font-weight: 100;
-        color: rgb(93, 86, 92);
-        line-height: 30 px;
-        text-align: justify;
-        margin-left: 20px;
-    }
+    .home{
+    
+        margin-left: 90px; 
+        
+    
+        
+        }
+        
+        .home1{
+        
+            margin-right: 90px;
+            font-family: 'system-ui';
+            font-size: 13px;
+            font-weight: 100;
+            color: rgb(93, 86, 92);
+            line-height: 30 px;
+            text-align: justify;
+            margin-left: 20px;
+      
+        
+        }
 
-    .donna {
-        height: 280px;
-        width: 280px;
-    }
+
+        .donna{
+
+            height: 280px;
+            width: 280px;
+        
+        
+            
+        }
+
 
     .container {
-        display: flex;
-        padding-bottom: -65px;
-        margin-bottom: -65px;
+       display: flex;
+       padding-bottom: -65px;
+       margin-bottom: -65px;
+       
     }
+    
 
-    .p-page {
+    .p-page{
+
         color: rgb(139, 137, 139);
         font-family: 'system-ui';
         font-size: 20px;
         text-align: justify;
         display: flex;
-        margin-left: 30px;
-        margin-right: 30px;
-        margin-top: 70px;
+         margin-left: 30px;
+         margin-right:30px;
+         margin-top: 70px;
+        
+        
     }
-
-    .p-page1 {
+    
+    .p-page1{
+    
         margin-top: 10px;
         color: rgb(211, 11, 175);
         font-family: 'system-ui';
         font-size: 20px;
         text-align: justify;
         display: flex;
-        margin-left: 30px;
-        margin-right: 30px;
+         margin-left: 30px;
+         margin-right: 30px;
+        
+    
+    
+        
     }
     .img-span {
         color: #e746bf;
@@ -446,7 +529,7 @@ input.button {
         margin-top: 0px;
         padding-top: 0px;
     }
-
+    
     h3 {
         font-family: 'system-ui';
         font-size: 20px;
@@ -455,55 +538,60 @@ input.button {
         margin-top: 5px;
         margin-left: 35px;
     }
-
+    
     .sf-1 {
         background-color: blue;
     }
-
+    
     .blog {
         display: flex;
         justify-content: space-between;
         margin: auto;
     }
-
+    
     .bloc {
         display: flex;
         justify-content: center;
     }
-
+    
     .blog1 {
         display: flex;
         justify-content: center;
-        margin-top: -40px;
+        margin-top: - 40px;
     }
     .blog2 {
         display: flex;
         justify-content: space-between;
         margin-left: 300px;
     }
-
+    
     .blog3 {
         display: flex;
         justify-content: center;
+      
+        
     }
-
-    .edit-margin {
+    
+    .edit-margin{
+    
         margin-left: 50px;
         margin-right: 50px;
     }
-
+    
     .img {
         justify-content: center;
         text-align: center;
-    }
+      
 
+    }
+    
     .img1 {
         margin-top: 50px;
     }
-
+    
     .img-description {
         text-align: justify;
-
+       
         padding-top: 0px;
         margin-top: 0px;
         font-family: 'system-ui';
@@ -511,7 +599,7 @@ input.button {
         color: rgb(93, 86, 92);
         line-height: 35 px;
     }
-
+    
     .titolo {
         text-align: center;
         color: rgb(212, 10, 118);
@@ -519,7 +607,7 @@ input.button {
         margin-top: 0px;
         padding-top: 0px;
     }
-
+    
     .img-description1 {
         margin-top: 40px;
         margin-right: 5px;
@@ -543,7 +631,7 @@ input.button {
         border: #c471f5;
         background: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
     }
-
+    
     p {
         font-family: 'system-ui';
         font-size: 23px;
@@ -552,7 +640,7 @@ input.button {
         text-align: justify;
         line-height: 35 px;
     }
-
+    
     .p-services {
         font-family: 'system-ui';
         font-size: 18px;
@@ -566,7 +654,7 @@ input.button {
         padding-right: 5px;
         padding-bottom: 0px;
     }
-
+    
     .h3-services {
         font-family: 'system-ui';
         font-size: 20px;
@@ -577,7 +665,7 @@ input.button {
         padding-right: 5px;
         padding-left: 5px;
     }
-
+    
     .p-action {
         font-family: 'system-ui';
         font-size: 20px;
@@ -592,20 +680,20 @@ input.button {
         margin-left: 5px;
         margin-right: 5px;
     }
-
+    
     .h3-action {
         font-family: 'system-ui';
         font-size: 15px;
         color: rgb(248, 244, 248);
         font-weight: 500;
-
+    
         margin-top: 10px;
         margin-bottom: 20px;
         text-align: center;
         padding-left: 10px;
         padding-right: 10px;
     }
-
+    
     .h1-description {
         text-align: center;
         font-family: 'system-ui';
@@ -614,7 +702,7 @@ input.button {
         font-weight: 300;
         margin-top: 40px;
     }
-
+    
     .h2-description {
         text-align: center;
         font-family: 'system-ui';
@@ -624,7 +712,7 @@ input.button {
         margin-top: 10px;
         margin-bottom: 20px;
     }
-
+    
     .h2-description2 {
         text-align: center;
         font-family: 'system-ui';
@@ -633,7 +721,7 @@ input.button {
         font-weight: 300;
         margin-top: 30px;
     }
-
+    
     .button {
         border-radius: 5px;
         border: 0px;
@@ -646,28 +734,28 @@ input.button {
         color: rgb(141, 5, 141);
         border: rgb(69, 4, 66);
     }
-
+    
     .generation-form {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-
+    
     .button-generation {
         align-items: center;
         justify-content: center;
     }
-
+    
     .text-generation {
         width: 500px;
         height: 40px;
     }
-
+    
     .tab-content {
         align-items: center;
         justify-content: center;
     }
-
+    
     .tab-buttons {
         align-items: center;
         justify-content: center;
@@ -683,16 +771,16 @@ input.button {
         margin-right: 8px;
         cursor: pointer;
     }
-
+    
     .tab-buttons button.active {
         background-color: #ec16a1;
         color: #fff;
     }
-
+    
     input.button {
         color: #ec16a1;
     }
-
+    
     .h3-description {
         text-align: center;
         font-family: 'system-ui';
@@ -701,14 +789,23 @@ input.button {
         font-weight: 300;
         margin-top: 10px;
     }
-
-    .p-pink {
+    
+    .p-pink{
+    
         color: rgb(243, 113, 221);
         font-family: 'system-ui';
         font-size: 13px;
+        
+    }
+    
+    .upload{
+    
+        color: #c471f5;
+        
+    
     }
 
-    .upload {
-        color: #c471f5;
-    }
+
+
+
 }
