--- a/pink-lemon-llc-frontend/src/recovery.css
+++ b/pink-lemon-llc-frontend/src/recovery.css
@@ -5,20 +5,26 @@
 }
 
 .btn-recovery {
+
     background-color: blueviolet;
     color: rgb(252, 252, 252);
     width: 100px;
     height: 40px;
     border-radius: 3px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-        Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     font-size: 20px;
     margin-left: 20px;
-}
 
-.text-recovery {
-    width: 150 px;
-    height: 40px;
-    border-color: blueviolet;
-}
+
+    }
+
+    .text-recovery{
+
+        width: 150 px ;
+        height: 40px; 
+        border-color: blueviolet;
+
+
+
+    }
